# effects-logging

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/effects_logging/: __init__.py  core.py  formatters.py  types.py
tests/: __init__.py  test_formatters.py  test_integration.py  test_logging.py  test_progressbar.py  test_types.py
